services/load-balancing/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: load-balancing
  name: load-balancing
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: metrics
    port: 9090
    targetPort: 9090
  selector:
    app: load-balancing
  type: ClusterIP
